Fixed whitespace issue

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -5,8 +5,12 @@ border: 2px dotted red;
 .cycle-slideshow { width: 50% }
 .cycle-slideshow img { width: 100%; height: auto }
 
-.container{
+body {
   margin: 0;
+  padding: 0;
+}
+
+.container{
 }
 
 #navbar{
